# crafting-interpreters

./: README.md
hlox/: LICENSE  README.md  hie.yaml  hlox.cabal
hlox/app/: Eval.hs  Interpreter.hs  Main.hs  Parser.hs  Syntax.hs
hlox/app/Eval/: Common.hs  Environment.hs  Result.hs
hlox/app/Parser/: Common.hs  Declaration.hs  Expression.hs  Lexer.hs  Parsers.hs  Program.hs  Statement.hs  Type.hs
hlox/input/: 2-variables.lox  3-if.lox  4-while.lox  5-for.lox
hlox/src/: Eval.hs  Syntax.hs
hlox/src/Eval/: Common.hs  Environment.hs  Value.hs
hlox/src/Hlox/: Eval.hs  Evaluate.hs  Parse.hs  Parser.hs  Syntax.hs
hlox/src/Hlox/Eval/: Common.hs  Environment.hs  Value.hs
hlox/src/Hlox/Evaluate/: Environment.hs  Eval.hs  Evaluators.hs  Value.hs
hlox/src/Hlox/Parse/: Lexer.hs  Parsers.hs  Types.hs
hlox/src/Hlox/Parser/: Lexer.hs  Parsers.hs  Type.hs
jlox/src/: Expr.java  Parser.java  Scanner.java  Stmt.java
jlox/src/tool/: GenerateAst.java
jlox/test/: 4-loops.lox
src/: AstPrinter.java  Environment.java  Expr.java  Interpreter.java  Lox.java  Parser.java
src/tool/: GenerateAst.java
