cabal-version:      3.4

name:               hlox
version:            0.1.0.0
-- A short (one-line) description of the package.
-- synopsis:        TODO: Write a short description of the package.

-- A longer description of the package.
-- description:     TODO: Write a longer description of the package.

license:            MIT
license-file:       LICENSE

author:             Andrei Dorian Duma
maintainer:         andrei@andreiduma.ro
copyright:          Andrei Dorian Duma 2023
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  Syntax
                      Parser
                      Eval

    other-modules:    Eval.Common
                      Eval.Environment
                      Eval.Value
                      Parser.Type
                      Parser.Lexer
                      Parser.Parsers

    build-depends:    base ^>= 4.17.0.0,
                      containers,
                      megaparsec ^>= 9.3.0,
                      mtl,
                      text

    hs-source-dirs:   src
    default-language: GHC2021

executable hlox
    import:           warnings

    main-is:          Main.hs

    build-depends:    base ^>= 4.17.0.0,
                      hlox,
                      -- Imports shared with the library don't need bounds
                      text,

    hs-source-dirs:   app
    default-language: GHC2021
